// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildFlatGraph > returns a loaded extended graph object from model 1`] = `
{
  "edges": [
    {
      "id": "/do/step5-root-exit-node",
      "label": "",
      "sourceId": "/do/step5",
      "targetId": "root-exit-node",
    },
    {
      "id": "/do/step4-/do/step5",
      "label": "",
      "sourceId": "/do/step4",
      "targetId": "/do/step5",
    },
    {
      "id": "/do/step3-/do/step4",
      "label": "",
      "sourceId": "/do/step3",
      "targetId": "/do/step4",
    },
    {
      "id": "/do/step2-/do/step3",
      "label": "",
      "sourceId": "/do/step2",
      "targetId": "/do/step3",
    },
    {
      "id": "/do/step1-/do/step2",
      "label": "",
      "sourceId": "/do/step1",
      "targetId": "/do/step2",
    },
    {
      "id": "root-entry-node-/do/step1",
      "label": "",
      "sourceId": "root-entry-node",
      "targetId": "/do/step1",
    },
  ],
  "entryNode": {
    "id": "root-entry-node",
    "parent": {
      "edges": [
        {
          "id": "/do/step5-root-exit-node",
          "label": "",
          "sourceId": "/do/step5",
          "targetId": "root-exit-node",
        },
        {
          "id": "/do/step4-/do/step5",
          "label": "",
          "sourceId": "/do/step4",
          "targetId": "/do/step5",
        },
        {
          "id": "/do/step3-/do/step4",
          "label": "",
          "sourceId": "/do/step3",
          "targetId": "/do/step4",
        },
        {
          "id": "/do/step2-/do/step3",
          "label": "",
          "sourceId": "/do/step2",
          "targetId": "/do/step3",
        },
        {
          "id": "/do/step1-/do/step2",
          "label": "",
          "sourceId": "/do/step1",
          "targetId": "/do/step2",
        },
        {
          "id": "root-entry-node-/do/step1",
          "label": "",
          "sourceId": "root-entry-node",
          "targetId": "/do/step1",
        },
      ],
      "entryNode": [Circular],
      "exitNode": {
        "id": "root-exit-node",
        "parent": [Circular],
        "type": "end",
      },
      "id": "root",
      "label": undefined,
      "nodes": [
        [Circular],
        {
          "id": "root-exit-node",
          "parent": [Circular],
          "type": "end",
        },
        {
          "id": "/do/step1",
          "label": "step1",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "first task",
            },
          },
          "taskReference": "/do/0/step1",
          "type": "set",
        },
        {
          "id": "/do/step2",
          "label": "step2",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "second task",
            },
          },
          "taskReference": "/do/1/step2",
          "type": "set",
        },
        {
          "id": "/do/step3",
          "label": "step3",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "third task",
            },
          },
          "taskReference": "/do/2/step3",
          "type": "set",
        },
        {
          "id": "/do/step4",
          "label": "step4",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fourth task",
            },
          },
          "taskReference": "/do/3/step4",
          "type": "set",
        },
        {
          "id": "/do/step5",
          "label": "step5",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fifth task",
            },
          },
          "taskReference": "/do/4/step5",
          "type": "set",
        },
      ],
      "parent": undefined,
      "task": undefined,
      "taskReference": undefined,
      "type": "root",
    },
    "type": "start",
  },
  "exitNode": {
    "id": "root-exit-node",
    "parent": {
      "edges": [
        {
          "id": "/do/step5-root-exit-node",
          "label": "",
          "sourceId": "/do/step5",
          "targetId": "root-exit-node",
        },
        {
          "id": "/do/step4-/do/step5",
          "label": "",
          "sourceId": "/do/step4",
          "targetId": "/do/step5",
        },
        {
          "id": "/do/step3-/do/step4",
          "label": "",
          "sourceId": "/do/step3",
          "targetId": "/do/step4",
        },
        {
          "id": "/do/step2-/do/step3",
          "label": "",
          "sourceId": "/do/step2",
          "targetId": "/do/step3",
        },
        {
          "id": "/do/step1-/do/step2",
          "label": "",
          "sourceId": "/do/step1",
          "targetId": "/do/step2",
        },
        {
          "id": "root-entry-node-/do/step1",
          "label": "",
          "sourceId": "root-entry-node",
          "targetId": "/do/step1",
        },
      ],
      "entryNode": {
        "id": "root-entry-node",
        "parent": [Circular],
        "type": "start",
      },
      "exitNode": [Circular],
      "id": "root",
      "label": undefined,
      "nodes": [
        {
          "id": "root-entry-node",
          "parent": [Circular],
          "type": "start",
        },
        [Circular],
        {
          "id": "/do/step1",
          "label": "step1",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "first task",
            },
          },
          "taskReference": "/do/0/step1",
          "type": "set",
        },
        {
          "id": "/do/step2",
          "label": "step2",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "second task",
            },
          },
          "taskReference": "/do/1/step2",
          "type": "set",
        },
        {
          "id": "/do/step3",
          "label": "step3",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "third task",
            },
          },
          "taskReference": "/do/2/step3",
          "type": "set",
        },
        {
          "id": "/do/step4",
          "label": "step4",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fourth task",
            },
          },
          "taskReference": "/do/3/step4",
          "type": "set",
        },
        {
          "id": "/do/step5",
          "label": "step5",
          "parent": [Circular],
          "task": {
            "set": {
              "variable": "fifth task",
            },
          },
          "taskReference": "/do/4/step5",
          "type": "set",
        },
      ],
      "parent": undefined,
      "task": undefined,
      "taskReference": undefined,
      "type": "root",
    },
    "type": "end",
  },
  "id": "root",
  "label": undefined,
  "nodes": [
    {
      "id": "root-entry-node",
      "label": undefined,
      "parentId": "root",
      "task": undefined,
      "taskReference": undefined,
      "type": "start",
    },
    {
      "id": "root-exit-node",
      "label": undefined,
      "parentId": "root",
      "task": undefined,
      "taskReference": undefined,
      "type": "end",
    },
    {
      "id": "/do/step1",
      "label": "step1",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "first task",
        },
      },
      "taskReference": "/do/0/step1",
      "type": "set",
    },
    {
      "id": "/do/step2",
      "label": "step2",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "second task",
        },
      },
      "taskReference": "/do/1/step2",
      "type": "set",
    },
    {
      "id": "/do/step3",
      "label": "step3",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "third task",
        },
      },
      "taskReference": "/do/2/step3",
      "type": "set",
    },
    {
      "id": "/do/step4",
      "label": "step4",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "fourth task",
        },
      },
      "taskReference": "/do/3/step4",
      "type": "set",
    },
    {
      "id": "/do/step5",
      "label": "step5",
      "parentId": "root",
      "task": {
        "set": {
          "variable": "fifth task",
        },
      },
      "taskReference": "/do/4/step5",
      "type": "set",
    },
  ],
  "parent": undefined,
  "task": undefined,
  "taskReference": undefined,
  "type": "root",
}
`;

exports[`parseValidationErrorMessage > parses validation errors from workflow with validation errors 1`] = `
[
  {
    "errorType": "#/oneOf/0/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/1/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/2/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/3/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/4/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/5/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/6/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/oneOf/0/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/1/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/2/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/3/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/4/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/5/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf/6/required",
    "message": "must have required property 'call'",
    "object": {
      "missingProperty": "call",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/oneOf",
    "message": "must match exactly one schema in oneOf",
    "object": {
      "passingSchemas": null,
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/type",
    "message": "must be array",
    "object": {
      "type": "array",
    },
    "path": "/do/0/checkup/do/1/checkup/do",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'fork'",
    "object": {
      "missingProperty": "fork",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'emit'",
    "object": {
      "missingProperty": "emit",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'listen'",
    "object": {
      "missingProperty": "listen",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'raise'",
    "object": {
      "missingProperty": "raise",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'run'",
    "object": {
      "missingProperty": "run",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'set'",
    "object": {
      "missingProperty": "set",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'switch'",
    "object": {
      "missingProperty": "switch",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'try'",
    "object": {
      "missingProperty": "try",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'wait'",
    "object": {
      "missingProperty": "wait",
    },
    "path": "/do/0/checkup/do/1/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'fork'",
    "object": {
      "missingProperty": "fork",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'emit'",
    "object": {
      "missingProperty": "emit",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'listen'",
    "object": {
      "missingProperty": "listen",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'raise'",
    "object": {
      "missingProperty": "raise",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'run'",
    "object": {
      "missingProperty": "run",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'set'",
    "object": {
      "missingProperty": "set",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'switch'",
    "object": {
      "missingProperty": "switch",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'try'",
    "object": {
      "missingProperty": "try",
    },
    "path": "/do/0/checkup",
  },
  {
    "errorType": "#/required",
    "message": "must have required property 'wait'",
    "object": {
      "missingProperty": "wait",
    },
    "path": "/do/0/checkup",
  },
]
`;

exports[`parseWorkflow > parses valid 'JSON' and returns model with no errors 1`] = `
{
  "errors": [],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first workflow",
          },
        },
      },
    ],
    "document": Document {
      "dsl": "1.0.3",
      "name": "valid-workflow-json",
      "namespace": "default",
      "version": "1.0.0",
    },
  },
}
`;

exports[`parseWorkflow > parses valid 'YAML' and returns model with no errors 1`] = `
{
  "errors": [],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first workflow",
          },
        },
      },
    ],
    "document": Document {
      "dsl": "1.0.3",
      "name": "valid-workflow-yaml",
      "namespace": "default",
      "version": "1.0.0",
    },
  },
}
`;

exports[`parseWorkflow > returns model and errors for invalid but parseable 'JSON' 1`] = `
{
  "errors": [
    {
      "errorType": "Validation failed at '<root>' (Workflow): 'Workflow' is invalid",
      "message": "The DSL version of the workflow 'undefined' does not satisfy the DSL version range supported by this SDK '>=1.0.0-0 <=1.0.3'.",
    },
  ],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first invalid json workflow",
          },
        },
      },
    ],
  },
}
`;

exports[`parseWorkflow > returns model and errors for invalid but parseable 'YAML' 1`] = `
{
  "errors": [
    {
      "errorType": "Validation failed at '<root>' (Workflow): 'Workflow' is invalid",
      "message": "The DSL version of the workflow 'undefined' does not satisfy the DSL version range supported by this SDK '>=1.0.0-0 <=1.0.3'.",
    },
  ],
  "model": Workflow {
    "do": TaskList [
      TaskItem {
        "step1": Task {
          "set": {
            "variable": "my first invalid yaml workflow",
          },
        },
      },
    ],
  },
}
`;

exports[`validateWorkflow > returns parsed validation errors for an invalid workflow 1`] = `
[
  {
    "errorType": "Validation failed at '<root>' (Workflow): 'Workflow' is invalid",
    "message": "The DSL version of the workflow 'undefined' does not satisfy the DSL version range supported by this SDK '>=1.0.0-0 <=1.0.3'.",
  },
]
`;
